update_ota_stm32/build/log/idf_py_stdout_output_15544
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\kien\Downloads\esp32\update_ota_stm32\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/kien/Downloads/esp32/update_ota_stm32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/8] Building C object esp-idf/ota_command/CMakeFiles/__idf_ota_command.dir/bootloader_command.c.obj
FAILED: esp-idf/ota_command/CMakeFiles/__idf_ota_command.dir/bootloader_command.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -IC:/Users/kien/Downloads/esp32/update_ota_stm32/build/config -IC:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command -IC:/Espressif/frameworks/esp-idf-v5.0/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0/components/esp_ringbuf/include -IC:/Users/kien/Downloads/esp32/update_ota_stm32/common/min_protocol -IC:/Users/kien/Downloads/esp32/update_ota_stm32/common/uart_esp -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/kien/Downloads/esp32/update_ota_stm32=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/ota_command/CMakeFiles/__idf_ota_command.dir/bootloader_command.c.obj -MF esp-idf\ota_command\CMakeFiles\__idf_ota_command.dir\bootloader_command.c.obj.d -o esp-idf/ota_command/CMakeFiles/__idf_ota_command.dir/bootloader_command.c.obj -c C:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command/bootloader_command.c
C:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command/bootloader_command.c: In function 'bootloader_handle':
C:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command/bootloader_command.c:130:5: error: implicit declaration of function 'ota_send_code_start_stop1'; did you mean 'ota_send_code_start_stop'? [-Werror=implicit-function-declaration]
  130 |     ota_send_code_start_stop1(OTA_STOP);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     ota_send_code_start_stop
C:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command/bootloader_command.c: At top level:
C:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command/bootloader_command.c:173:6: warning: conflicting types for 'ota_send_code_start_stop1'; have 'void(OTA_CODE_NAME)'
  173 | void ota_send_code_start_stop1(OTA_CODE_NAME ota_code_name)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/kien/Downloads/esp32/update_ota_stm32/common/ota_command/bootloader_command.c:130:5: note: previous implicit declaration of 'ota_send_code_start_stop1' with type 'void(OTA_CODE_NAME)'
  130 |     ota_send_code_start_stop1(OTA_STOP);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
